--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 		<org.aspectj-version>1.7.4</org.aspectj-version>
 		<org.slf4j-version>1.7.5</org.slf4j-version>
 		<hibernate.version>4.3.5.Final</hibernate.version>
+		<postgresql.version>9.3-1101-jdbc41</postgresql.version>
 	</properties>
 	<dependencies>
 		<!-- Spring -->
@@ -146,6 +147,13 @@
 			<artifactId>junit</artifactId>
 			<version>4.7</version>
 			<scope>test</scope>
+		</dependency>
+		
+		<!-- Added for connecting postgresql db -->
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>${postgresql.version}</version>
 		</dependency>
 
 	</dependencies>
